--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>Third Branch</title>
       <title>Dog Therapy</title>
+      <title>Test Branch</title>
       <link rel="stylesheet" href="dt.css">
   </head>
   <body>
